--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-gemini-pdf-book-reader",
+  "name": "gemini-pdf-book-reader",
   "private": true,
   "version": "0.0.0",
   "type": "module",
